--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.95",
+    "@mui/material": "^5.10.0",
+    "@mui/styles": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.5",
+    "alchemy-sdk": "^2.0.2",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
+    "ethers": "^5.6.9",
+    "moment": "^2.29.4",
     "next": "12.2.5",
+    "next-themes": "^0.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web3": "^1.7.5",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "eslint": "8.21.0",
